Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45481

[QtWebkit] [OpenGL] QtTestBrowser crashes when exiting on a page with WebGL or accelerated canvas

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.2
    • 5.4.0
    • WebKit
    • None
    • Ubuntu with OpenGL enabled. Qt 5.4
    • 738ad7e37c66f2afdbc7a77aff3ab7fa510361a2

      Issue reproduced on Ubuntu with OpenGL enabled.
      Happens on an url using graphic acceleration, for example : http://get.webgl.org

      Issue is that the TextureMapperGL created a GraphicsContext3D using the current OpenGL context. This is done by storing a reference on QOpenGLContext::currentContext() inside GraphicsContext3DPrivate::GraphicsContext3DPrivate().
      When exiting QtTestBrowser, Qt releases QOpenGLContext before the release of the GraphicsContext3D in webkit which leads to a crash when destoying GraphicsContext3DPrivate.

      Log attached showing the destruction of the QOpenGLContexts and the access to the freed context from qtwebkit.

        For Gerrit Dashboard: QTBUG-45481
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            ychuzevi Yohan Chuzeville
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes